stop zoom bug on mobile

--- a/pages/style.css
+++ b/pages/style.css
@@ -41,6 +41,7 @@
 body{
 	padding:0 !important;
 	margin:0 !important;
+	max-width:100vw !important;
 	background-color:#333335;
 	font-family: arial, sans-serif;
 }
